<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Qbon相機</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">552903828137445</string>
    <string name="map_api_key">AIzaSyDFXdeUBReo751cF34MHfagV4hpNRiBrvs</string>
    <string name="qbon_private_key">e0c0d01fb6918e1009e9906ab9e6cbdf7dc5f227</string>
    <string name="qbon_application_key">c9da104eade274dedc65f222b17c4310</string> 
    
    <string name="dialog_loading">載入中&#8230;</string>
    <string name="dialog_progressing">處理中&#8230;</string>
    <string name="dialog_cancel">關閉</string>
	<string name="empty_list_msg">很抱歉，您的所在地附近沒有優惠！</string>
    
    
    <string name="main_camera_btn">我要拍照</string>
    <string name="main_album_btn">選取照片</string>
    
    
    <string name="app_logo">Qbon Camera!</string>
	<string name="menu_take_photo">拍攝照片</string>
	<string name="menu_select_photo">選擇照片</string>
	<string name="menu_share_photo">分享照片</string>
	<string name="menu_find_location">尋找優惠</string>
	<string name="menu_qbon">&#160;&#160;&#160;&#160;Qbon</string>
	
	
	<!-- message -->
	<string name="sharing_preparing">準備分享中‧‧‧</string>
	<string name="sharing_preparing_title">分享到。。。</string>
	<string name="sharing_prepare_error">照片處理錯誤</string>
	<string name="sharing_prepare_success">分享成功！</string>
	
	<!-- OfferList -->	
	<string name="distince_prefix">距離店家 </string>
	<string name="distince_lastfix">公里 </string>
	<string name="find_location_error">搜尋優惠失敗，請再試一次。 </string>
	
	<string name="offerlist_default_title">Qbon相機</string>
	<string name="offerlist_content">用 Qbon相機拍照分享優惠！</string>
	<string name="offerlist_sub_content">趕快掃描 QRCode！</string>
	
	<!-- QRCode -->
	<string name="qbon_list_title">開啟我的 Qbon</string>
	<string name="qrcode_scan_btn">掃描優惠券 QRCode</string>
	<string name="qbon_login_btn">登入</string>
	<string name="my_qbon_btn">開啟我的 Qbon</string>
	
	<!-- QRCode -->
	<string name="qrcode_title">取得優惠券</string>
	<string name="qrcode_scanning">將相機對準 QRCode&#8230;</string>
	<string name="qrcode_rescan_btn">重新掃描</string>
	<string name="qrcode_save_btn">儲存優惠券</string>
	<string name="qrcode_result_code">優惠券代碼：</string>
	<string name="qrcode_result_title">注意</string>
	<string name="qrcode_result_msg">是否要將此優惠券儲存？</string>
	<string name="qrcode_result_yes_btn">是</string>
	<string name="qrcode_result_no_btn">否</string>
	<string name="qrcode_result_success">優惠券儲存成功！</string>
	<string name="qrcode_result_error">優惠券儲存失敗！</string>
	<string name="qrcode_format_error">優惠碼格式錯誤！</string>
	
	<!-- Login -->
	<string name="login_title">登入 Qbon</string>
    <string name="login_progress_signing_in">登入中&#8230;</string>
    <string name="prompt_email">請輸入帳號</string>
    <string name="prompt_password">請輸入密碼</string>
    <string name="action_register">註冊帳號</string>
    <string name="action_sign_in">登入</string>
    <string name="action_fb_sign_in">Facebook 登入</string>
    <string name="error_invalid_email">Email 格式錯誤</string>
    <string name="error_invalid_password">密碼過短</string>
    <string name="error_field_required">必填</string>
    <string name="success_login">登入成功！</string>   
	
    <!-- Menu -->
    <string name="action_logout">登出</string>
    
    <!-- Qbon List -->
	<string name="qbon_list_login">您尚未登入，請透過 Qbon 登入您的帳號</string>
    <string name="qbon_login_alert_title">登入 Qbon</string>  
    <string name="qbon_login_alert_msg">是否要前往 Qbon 登入帳號？</string> 
    <string name="qbon_login_alert_yes_btn">確定</string> 
    <string name="qbon_login_alert_no_btn">取消</string>   
	<string name="qbon_list_wallet">請稍候，將帶您開啟 Qbon </string>
	
	<!-- Exit -->
    <string name="dialog_exit_sure_title">提醒您</string>
    <string name="dialog_exit_sure_content">確定要離開？</string>
    <string name="dialog_internet_title">請檢察連線</string>
    <string name="dialog_internet_content">偵測不到網路連線，請確認您是否連上網路。</string>
    <string name="dialog_btn_yes">確定</string>
    <string name="dialog_btn_no">取消</string>
    
	<!-- Msg -->
    <string name="dialog_qrcode_gening">產生 QR Code 中&#8230;</string>
    <string name="dialog_searching_location">搜尋附近優惠中&#8230;</string>
    <string name="dialog_offerlist_title">請選取您要分享的優惠</string>
    <string name="dialog_hint_edittext">點這裡輸入您的分享文字</string>
</resources>
