<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".QbonListActivity" >

    <Button
        android:id="@+id/qbon_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/qbon_login_btn"
        android:textSize="35sp" />

    <Button
        android:id="@+id/my_qbon_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/my_qbon_btn"
        android:textSize="35sp" />

    <Button
        android:id="@+id/qrcode_scan_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/qrcode_scan_btn"
        android:textSize="35sp" />

</LinearLayout>
