<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    tools:context=".MainActivity"
	android:background="#FFFFFF">
    
	<!-- Process progress -->

    <LinearLayout
        android:id="@+id/process_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/process_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/dialog_searching_location"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
	<TextView 
	    android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/empty_list_msg"
	    />
	<TextView 
	    android:id="@+id/dialog_action_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/dialog_offerlist_title"
        android:textSize="20sp"
        android:padding="4dp"
	    />
	<ScrollView 
	    android:id="@+id/dialog_action"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/dialog_action_title">
	    <LinearLayout
	         android:id="@+id/item_list"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:orientation="vertical" />
	</ScrollView>
</RelativeLayout>