<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >	
    <SurfaceView
   	 	android:id="@+id/camerapreview"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    />

	<ImageView 
	       android:id="@+id/capture_picture_bg"
	       android:layout_width="match_parent"
	       android:layout_height="match_parent"
	       android:scaleType="centerCrop"			    
	    />
    <LinearLayout 
        android:layout_width="match_parent"
   	 	android:layout_height="match_parent"
   	 	android:orientation="vertical"
        >

	    <RelativeLayout
	        android:id="@+id/top_banner"
	        android:layout_width="match_parent"
	        android:layout_height="150dp"
	        android:background="@drawable/top_banner"
	        android:gravity="bottom" >

			<!--  
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentBottom="true"
	            android:layout_alignParentLeft="true"
	            android:layout_marginLeft="16dp"
	            android:text="@string/app_logo"
	            android:textColor="#FFFFFF"
	            android:textSize="35sp" />
			-->

			<ImageView
			    android:layout_width="220dp"
			    android:layout_height="wrap_content"
			    android:layout_alignParentLeft="true"
			    android:layout_centerVertical="true"
			    android:adjustViewBounds="true"
			    android:scaleType="centerCrop"
			    android:src="@drawable/qbon_camera_logo" />

	    </RelativeLayout>

		<RelativeLayout
		    android:id="@+id/capture_zone"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:background="#00000000"
		    android:orientation="horizontal" >
				<ImageView 
			        android:id="@+id/capture_picture"
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:scaleType="centerCrop"	    
				    />

				<RelativeLayout
				    android:id="@+id/capture_zone"
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:layout_alignParentRight="true"
				    android:layout_alignParentTop="true"
				    android:layout_margin="5dp" >

				    <ImageView
				        android:id="@+id/app_icon"
				        android:layout_width="60dp"
				        android:layout_height="60dp"
				        android:layout_alignParentBottom="true"
				        android:layout_alignParentLeft="true"
				        android:src="@drawable/ic_launcher_icon" />

				    <ImageView
				        android:id="@+id/store_qrcode"
				        android:layout_width="60dp"
				        android:layout_height="60dp"
				        android:layout_above="@+id/app_icon"
				        android:layout_alignParentLeft="true"
				    	android:layout_marginBottom="5dp" />

				    <TextView
				        android:id="@+id/store_content_sub"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_below="@+id/store_content"
				        android:layout_toRightOf="@+id/app_icon"
				        android:textStyle="bold"
				        android:layout_marginLeft="2dp"
				        android:textColor="#FFFFFF"
				        android:textSize="16sp" />

				    <TextView
				        android:id="@+id/store_content"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_alignTop="@+id/app_icon"
				        android:layout_toRightOf="@+id/app_icon"
				        android:layout_marginLeft="2dp"
				        android:textColor="#FFFFFF"
				        android:textStyle="bold"
				        android:textSize="16sp" />

				    <TextView
				        android:id="@+id/store_name"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_alignBottom="@+id/store_qrcode"
				        android:layout_toRightOf="@+id/store_qrcode"
				        android:layout_marginLeft="2dp"
				        android:textColor="#FFFFFF"
				        android:textStyle="bold"
				        android:textSize="23sp" />

				    <EditText
				        android:id="@+id/custom_text"
				        android:layout_width="match_parent"
				        android:layout_height="100dp"
				        android:textColor="#FFFFFF"
				        android:background="#00000000"
				        android:textStyle="bold"
				        android:textSize="40sp"
				        android:gravity="right"
				        android:layout_alignParentRight="true"
				        android:layout_alignParentTop="true"
				        android:text="@string/dialog_hint_edittext"
				        android:layout_marginRight="5dp"
				        android:ems="10" >

				    </EditText>

				</RelativeLayout>

		</RelativeLayout>

		<RelativeLayout
		    android:id="@+id/bottom_banner"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
	        android:background="@drawable/bottom_banner">

		    <ImageView
		        android:id="@+id/take_photo_btn"
		        android:layout_width="60dp"
		        android:layout_height="60dp"
		        android:layout_centerHorizontal="true"
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="5dp"
		        android:layout_marginRight="5dp"
		        android:src="@drawable/camerabtn" />

		    <ImageView
		        android:id="@+id/select_photo_btn"
		        android:layout_width="50dp"
		        android:layout_height="50dp"
		        android:layout_alignTop="@+id/find_location_btn"
		        android:layout_marginRight="20dp"
		        android:layout_toLeftOf="@+id/find_location_btn"
		        android:src="@drawable/photobtn" />

		    <ImageView
		        android:id="@+id/find_location_btn"
		        android:layout_width="50dp"
		        android:layout_height="50dp"
		        android:layout_alignTop="@+id/share_photo_btn"
		        android:layout_marginRight="20dp"
		        android:layout_toLeftOf="@+id/take_photo_btn"
		        android:src="@drawable/lsitbtn" />

		    <ImageView
		        android:id="@+id/share_photo_btn"
		        android:layout_width="50dp"
		        android:layout_height="50dp"
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="20dp"
		        android:layout_toRightOf="@+id/take_photo_btn"
		        android:src="@drawable/sharebtn" />

		    <ImageView
		        android:id="@+id/qbon_btn"
		        android:layout_width="50dp"
		        android:layout_height="50dp"
		        android:layout_alignTop="@+id/share_photo_btn"
		        android:layout_marginLeft="20dp"
		        android:layout_toRightOf="@+id/share_photo_btn"
		        android:src="@drawable/qboniconbtn" />

		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/take_photo_btn"
		        android:layout_centerHorizontal="true"
		        android:text="@string/menu_take_photo"
		        android:textColor="#FFFFFF"
				android:textStyle="bold"
		        android:layout_marginLeft="5dp"
		        android:layout_marginRight="5dp"
		        android:textSize="12sp" />

		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/qbon_btn"
		        android:layout_below="@+id/qbon_btn"
		        android:text="@string/menu_qbon"
		        android:textColor="#FFFFFF"
				android:textStyle="bold"
		        android:textSize="12sp" />

		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/share_photo_btn"
		        android:layout_below="@+id/share_photo_btn"
		        android:text="@string/menu_share_photo"
		        android:textColor="#FFFFFF"
				android:textStyle="bold"
		        android:textSize="12sp" />

		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/select_photo_btn"
		        android:layout_below="@+id/select_photo_btn"
		        android:text="@string/menu_select_photo"
		        android:textColor="#FFFFFF"
				android:textStyle="bold"
		        android:textSize="12sp" />

		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/find_location_btn"
		        android:layout_below="@+id/find_location_btn"
		        android:text="@string/menu_find_location"
		        android:textColor="#FFFFFF"
				android:textStyle="bold"
		        android:textSize="12sp" />

		</RelativeLayout>

    </LinearLayout>

</FrameLayout>
